fix/scrollbar added to subtasks

--- a/src/components/Modal/ModalViewTask/styles.scss
+++ b/src/components/Modal/ModalViewTask/styles.scss
@@ -83,6 +83,28 @@
         flex-direction: column;
         gap: 8px;
         margin-bottom: 24px;
+        max-height: 200px;
+        overflow-y: auto;
+
+        &::-webkit-scrollbar {
+            width: 0;
+            transition: width 0.9s ease;
+        }
+        
+        &:hover {
+            &::-webkit-scrollbar {
+                width: 8px;
+            }
+        }
+    
+        &::-webkit-scrollbar-thumb {
+            background: #828FA3;
+            border-radius: 4px;
+        }
+    
+        &::-webkit-scrollbar-thumb:hover {
+            background: #606a79;
+        }
     }
 
     &__check-item {
